<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical"
    android:layout_weight="1"
    tools:context=".NotificationActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@color/purple_700"
                android:layout_height="198dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="26sp"
                    android:layout_marginBottom="28dp"
                    android:textColor="@color/white"
                    android:id="@+id/titlepage"
                    android:textAlignment="center"
                    android:text="@string/medication_confirmation"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp">
                </View>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="22dp"
                android:background="@color/white"
                android:paddingTop="22dp"
                android:orientation="vertical"
                android:layout_marginTop="-40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Medications list"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:id="@+id/description_text"
                        android:layout_marginBottom="10dp">
                    </TextView>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:id="@+id/confirm_recycler_view"
                        android:layout_height="wrap_content"
                        >
                    </androidx.recyclerview.widget.RecyclerView>


                </LinearLayout>

            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/purple_700"
                android:layout_marginStart="16dp"
                android:textAllCaps="false"
                android:text="@string/confirm"
                android:id="@+id/confirm_medications"
                android:textSize="20sp"
                >
            </Button>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:text="@string/not_at_home"></TextView>
            <Button
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/purple_700"
                android:layout_marginStart="16dp"
                android:textAllCaps="false"
                android:text="@string/show_nearby_pharmacies"
                android:id="@+id/show_nearby"
                android:textSize="20sp"
                >
            </Button>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="#E91E63"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:textAlignment="center"
                android:textColor="@color/darkred"
                android:text="@string/or" />
            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="#E91E63"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
             />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:text="@string/remind_me_after" />
            <Spinner
                android:id="@+id/minutesspinner"
                android:backgroundTint="@color/teal_700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/dimgrey"
                android:layout_marginStart="16dp"
                android:textAllCaps="false"
                android:text="@string/later"
                android:id="@+id/cancel_reminder"
                android:textSize="20sp"
                >
            </Button>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>