<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical"
    android:layout_weight="1"
    tools:context=".NewReminderActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@color/purple_700"
            android:layout_height="198dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:textSize="26sp"
                android:layout_marginBottom="28dp"
                android:textColor="@color/white"
                android:id="@+id/titlepage"
                android:textAlignment="center"
                android:text="@string/create_new_reminder"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp">
            </View>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="22dp"
            android:background="@color/white"
            android:paddingTop="22dp"
            android:orientation="vertical"
            android:layout_marginTop="-40dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add medication"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp">
            </TextView>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <EditText
        android:id="@+id/edit_medication_field"
        android:inputType="text"
        android:layout_width="240dp"
        android:paddingStart="12dp"
        android:backgroundTint="@color/darkred"
        android:textColor="@color/purple_700"
        android:layout_height="45dp"
        android:hint="@string/which_medication"
        android:importantForAutofill="no" />
    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/add_medication"
        android:backgroundTint="@color/purple_700"
        android:src="@drawable/ic_baseline_add_24"
        android:layout_alignParentEnd="true">
    </ImageButton>
</RelativeLayout>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Medications list"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:id="@+id/description_text"
                    android:layout_marginBottom="10dp">
                </TextView>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:id="@+id/new_reminder_medication_list"
                    android:layout_height="wrap_content"
                    >
                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:id="@+id/time_title"
                    android:layout_marginBottom="10dp">
                </TextView>

                <EditText
                    android:id="@+id/reminder_time"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:paddingStart="12dp"
                    android:backgroundTint="@color/darkred"
                    android:textColor="@color/purple_700"
                    android:layout_height="45dp"
                    android:focusable="false"
                    android:hint="@string/which_medication"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sound"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp">
                </TextView>

                <EditText
                    android:id="@+id/test"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:paddingStart="12dp"
                    android:backgroundTint="@color/darkred"
                    android:textColor="@color/purple_700"
                    android:layout_height="45dp"
                    android:focusable="false"
                    android:hint="Which melody?"
                    android:importantForAutofill="no" />

            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/purple_700"
            android:layout_marginStart="16dp"
            android:textAllCaps="false"
            android:text="@string/create_reminder"
            android:id="@+id/create_reminder"
            android:textSize="20sp"
            >
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/purple_700"
            android:layout_marginStart="16dp"
            android:textAllCaps="false"
            android:visibility="gone"
            android:text="@string/save_reminder"
            android:id="@+id/save_reminder"
            android:textSize="20sp"
            >
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/dimgrey"
            android:layout_marginStart="16dp"
            android:textAllCaps="false"
            android:text="@string/cancel"
            android:id="@+id/cancel_reminder"
            android:textSize="20sp"
            >
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/darkred"
            android:layout_marginStart="16dp"
            android:textAllCaps="false"
            android:text="@string/delete_reminder"
            android:visibility="invisible"
            android:id="@+id/delete_reminder"
            android:textSize="20sp"
            >
        </Button>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>